# fastapi25

./: README.md  pyproject.toml
fastapi25/: app.py
tests/: test_app.py
