[tool.poetry]
name = "fastapi25"
version = "0.1.0"
description = ""
authors = ["Jorge Luis Plautz <jorge.plautz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
